# aoc2023

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
aoc-benchmarking/: Cargo.toml
aoc-benchmarking/benches/: bench_main.rs
aoc-benchmarking/src/: helper_macros.rs  lib.rs
aoc-cli/: Cargo.toml
aoc-cli/src/: cli.rs  main.rs
aoc-plumbing/: Cargo.toml
aoc-plumbing/src/: lib.rs  problem.rs
ci/: build-task.yaml
ci/scripts/: build.sh  input_path.sh
day-001-trebuchet/: Cargo.toml  README.md
day-001-trebuchet/src/: lib.rs
day-002-cube-conundrum/: Cargo.toml  README.md
day-002-cube-conundrum/src/: lib.rs
day-003-gear-ratios/: Cargo.toml  README.md
day-003-gear-ratios/src/: lib.rs
day-004-scratchcards/: Cargo.toml  README.md
day-004-scratchcards/src/: lib.rs
day-005-you-give-a-seed-a-fertilizer/: Cargo.toml  README.md
day-005-you-give-a-seed-a-fertilizer/src/: lib.rs
day-006-wait-for-it/: Cargo.toml  README.md
day-006-wait-for-it/src/: lib.rs
day-007-camel-cards/: Cargo.toml  README.md
day-007-camel-cards/src/: lib.rs
day-008-haunted-wasteland/: Cargo.toml  README.md
day-008-haunted-wasteland/src/: lib.rs
day-009-mirage-maintenance/: Cargo.toml  README.md
day-009-mirage-maintenance/src/: lib.rs
day-010-pipe-maze/: Cargo.toml  README.md
day-010-pipe-maze/src/: lib.rs
day-011-cosmic-expansion/: Cargo.toml  README.md  input.txt
day-011-cosmic-expansion/src/: lib.rs
day-012-hot-springs/: Cargo.toml  README.md
day-012-hot-springs/src/: lib.rs
day-013-point-of-incidence/: Cargo.toml  README.md  input.txt
day-013-point-of-incidence/src/: lib.rs
day-014-parabolic-reflector-dish/: Cargo.toml  README.md
day-014-parabolic-reflector-dish/src/: lib.rs
day-015-lens-library/: Cargo.toml  README.md  input.txt
day-015-lens-library/src/: lib.rs
day-016-the-floor-will-be-lava/: Cargo.toml  README.md  input.txt
day-016-the-floor-will-be-lava/src/: lib.rs
day-017-clumsy-crucible/: Cargo.toml  README.md
day-017-clumsy-crucible/src/: lib.rs
day-018-lavaduct-lagoon/: Cargo.toml  README.md
day-018-lavaduct-lagoon/src/: lib.rs
day-019-aplenty/: Cargo.toml  README.md  input.txt
day-019-aplenty/src/: lib.rs
day-020-pulse-propagation/: Cargo.toml  README.md  input.txt
day-020-pulse-propagation/src/: lib.rs
day-021-step-counter/: Cargo.toml  README.md
day-021-step-counter/src/: lib.rs
day-022-sand-slabs/: Cargo.toml  README.md
day-022-sand-slabs/src/: lib.rs
day-023-a-long-walk/: Cargo.toml  README.md
day-023-a-long-walk/src/: lib.rs
day-024-never-tell-me-the-odds/: Cargo.toml  README.md  input.txt
day-024-never-tell-me-the-odds/src/: lib.rs
day-025-snowverload/: Cargo.toml  README.md  input.txt
day-025-snowverload/src/: lib.rs
scripts/: flame.sh  new.sh
template/: Cargo.toml  README.md  cargo-generate.toml  crate_ref  name_ref
template/src/: lib.rs
