[workspace]
resolver = "2"
members = [
    "aoc-benchmarking",
    "aoc-cli",
    "aoc-plumbing",
    # "day-*",
]

exclude = ["template"]

[workspace.dependencies]
anyhow = "1.0.75"
aoc-std = { version = "0.1.2", registry = "ancalagon" }
itertools = "0.11.0"
nom = { version = "7.1", features = ["alloc"] }
num = "0.4.1"
rayon = "1.8.0"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.49"

[profile.release]
lto = true
