[workspace]
resolver = "2"
members = [
    "aoc-benchmarking",
    "aoc-cli",
    "aoc-plumbing",
    # "day-*",
]

exclude = ["template"]

[workspace.dependencies]
anyhow = "1.0.75"
# if you're trying to build this without access to the ancalagon registry,
# comment out this line and uncomment the git-specified one
aoc-std = { version = "0.3.10", registry = "ancalagon" }
# aoc-std = { version = "0.3.4", git = "https://github.com/mattcl/aoc-std.git" }
itertools = "0.12.0"
nom = { version = "7.1", features = ["alloc"] }
num = "0.4.1"
num-prime = "0.4.3"
rayon = "1.8.0"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.49"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
codegen-units = 1
