[package]
name = "aoc-benchmarking"
version = "0.1.0"
edition = "2021"
description = "Wrapper for having benchmarks in a single place."

[[bench]]
name = "bench_main"
harness = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["csv_output"] }

[dependencies]
aoc-plumbing = { path = "../aoc-plumbing" }
trebuchet = { path = "../day-001-trebuchet" }
cube-conundrum = { path = "../day-002-cube-conundrum" }
gear-ratios = { path = "../day-003-gear-ratios" }
scratchcards = { path = "../day-004-scratchcards" }
you-give-a-seed-a-fertilizer = { path = "../day-005-you-give-a-seed-a-fertilizer" }
wait-for-it = { path = "../day-006-wait-for-it" }
