[package]
name = "aoc-cli"
version = "0.17.1"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
edition = "2021"
description = "A command line interface for executing Advent of Code solutions."

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
aoc-plumbing = { path = "../aoc-plumbing" }
anyhow = { workspace = true }
clap = { version = "4", features = ["cargo", "env", "derive", "wrap_help"] }
clap_complete = "4"
serde = { workspace = true }
serde_json = { workspace = true }
trebuchet = { path = "../day-001-trebuchet" }
cube-conundrum = { path = "../day-002-cube-conundrum" }
gear-ratios = { path = "../day-003-gear-ratios" }
scratchcards = { path = "../day-004-scratchcards" }
you-give-a-seed-a-fertilizer = { path = "../day-005-you-give-a-seed-a-fertilizer" }
wait-for-it = { path = "../day-006-wait-for-it" }
camel-cards = { path = "../day-007-camel-cards" }
haunted-wasteland = { path = "../day-008-haunted-wasteland" }
mirage-maintenance = { path = "../day-009-mirage-maintenance" }
pipe-maze = { path = "../day-010-pipe-maze" }
cosmic-expansion = { path = "../day-011-cosmic-expansion" }
hot-springs = { path = "../day-012-hot-springs" }
point-of-incidence = { path = "../day-013-point-of-incidence" }
parabolic-reflector-dish = { path = "../day-014-parabolic-reflector-dish" }
lens-library = { path = "../day-015-lens-library" }
the-floor-will-be-lava = { path = "../day-016-the-floor-will-be-lava" }
clumsy-crucible = { path = "../day-017-clumsy-crucible" }
