[package]
name = "snowverload"
version = "0.1.0"
edition = "2021"
description = "snowverload"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-plumbing = { path = "../aoc-plumbing" }
aoc-std = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
nom = { workspace = true }
pathfinding = "4.8.0"
rand = "0.8.5"
rayon = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
xxhash-rust = { workspace = true }
